--- a/cdst.core/src/main/resources/config/config.properties
+++ b/cdst.core/src/main/resources/config/config.properties
@@ -2,7 +2,8 @@ aircraftName = Aircraft
 profilePath = model/CDSProfile.profile.uml
 imagesRootDir = pfd-cs
 simDataRootDir = simdata
-oclFile = constraints/constraints2.ocl
+oclFile = constraints/constraints.ocl
 cdsXmlPath = cds-xml/pfd.xml
 mappingFile = mappings/mapping.mp
 resultsDir = results
+maxThreshold = 10000
